# comexdown

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: publish.yml  tests.yml
comexdown/: __init__.py  cli.py  constants.py  download.py  fs.py  storage.py  urls.py
tests/: test_cli.py  test_comexdown.py  test_download.py  test_fs.py  test_storage.py
