[tool.poetry]
name = "comexdown"
version = "1.4.0"
description = "A commandline utility to download Brazil's foreign trade data"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/viridis-data/comexdown"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
packages = [
	{include = "comexdown"}
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
coveralls = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
autopep8 = "*"
isort = "*"
flake8 = "*"
wheel = "*"

[tool.poetry.scripts]
comexdown = "comexdown.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
